--- a/src/components/toolBar/_toolBar.css
+++ b/src/components/toolBar/_toolBar.css
@@ -97,6 +97,11 @@ ol, ul {
 .ranging:hover{
     opacity: 0.6
 }
+.ranging_active{
+    composes:toolItemSpan;
+    padding-top: 20px;
+    background-position: 10px -62px;
+}
 .fullscreen{
     composes:toolItemSpan;
     border: 0;
