--- a/src/components/toolBar/_toolBar.css
+++ b/src/components/toolBar/_toolBar.css
@@ -80,6 +80,11 @@ ol, ul {
 .subway:hover{
     opacity: 0.6
 }
+.subway_active{
+    composes:layerItemSpan;
+    padding-top: 20px;
+    background-position: 11px -190px;
+}
 /*tool_item*/
 .toolItemSpan {
     float: left;
