--- a/src/components/rbox/menu/_craResults.css
+++ b/src/components/rbox/menu/_craResults.css
@@ -1,187 +1,209 @@
 .traffic_tag {
-    font-family: 'Microsoft Yahei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Microsoft Yahei','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
     float: left;
     line-height: 30px;
 }
-
-
 /*结果面板上层统计展示*/
-
-.smooth_jam {
+.smooth_jam{
     float: left;
 }
-
+.smooth_jam1{
+    position: absolute;
+    right: 118px;
+    top: 8px;
+}
+.smooth_jam2{
+    position: absolute;
+    right: 96px;
+    top:38px;
+}
 .separator {
     position: absolute;
     right: 38px;
     top: 70px;
-    height: 30px;
+    height: 25px;
     width: 1px;
     background: #e5e5e5;
 }
-
-.smooth_jam_num {
+.separator_LV0{
+    top: 75px;
+    composes:separator;
+}
+.separator_LV1{
+    composes:separator;
+    top: 10px;
+    right: 38px;
+}
+.separator_LV2{
+    composes:separator;
+    top: 42px;
+    right: 38px;
+}
+.separator_LV3{
+    composes:separator;
+    top: 10px;
+    right: 190px;
+}
+.separator_LV4{
+    composes:separator;
+    top: 42px;
+    right: 190px;
+}
+.separator_LV5{
+    composes:separator;
+    top: 75px;
+    right: 190px;
+}
+.smooth_jam_num{
     padding-right: 59px;
     float: left;
-    border-right: 1px #e5e5e5 solid;
 }
-
-.smooth_jam_num2 {
-    padding-right: 35px;
+.smooth_jam_num2{
+    padding-right: 25px;
+    padding-left: 5px;
     float: left;
-    border-right: 1px #e5e5e5 solid;
 }
 
-.traffic_level_li {
+.smooth_jam_num3{
+    position: absolute;
+    left: 290px;
+    top: 8px;
+}
+.smooth_jam_num4{
+    position: absolute;
+    left: 310px;
+    top: 38px;
+}
+
+.traffic_level_li{
     float: left;
     width: 33px;
     height: 6px;
     margin: 11px 6px 0px;
 }
-
-.traffic_level_li_r {
-    float: right;
+.traffic_level_1{
+    position: absolute;
+    right: 150px;
+    top: 20px;
     width: 33px;
     height: 6px;
-    margin: 11px 6px 0px;
+    background: rgb(54,174,76);
 }
-
-.traffic_level_1 {
-    composes: traffic_level_li;
-    background: rgb(54, 174, 76);
+.traffic_level_2{
+    position: absolute;
+    right: 150px;
+    top: 50px;
+    width: 33px;
+    height: 6px;
+    background: rgb(106,183,45);
 }
-
-.traffic_level_2 {
-    composes: traffic_level_li;
-    background: rgb(106, 183, 45);
+.traffic_level_3{
+    composes:traffic_level_li;
+    background: rgb(236,232,57);
 }
-
-.traffic_level_3 {
-    composes: traffic_level_li;
-    background: rgb(236, 232, 57);
+.traffic_level_4{
+    composes:traffic_level_li;
+    background: rgb(242,150,24);
 }
-
-.traffic_level_4 {
-    composes: traffic_level_li;
-    background: rgb(242, 150, 24);
+.traffic_level_5{
+    composes:traffic_level_li;
+    background: rgb(228,26,22);
 }
-
-.traffic_level_5 {
-    composes: traffic_level_li;
-    background: rgb(228, 26, 22);
-}
-
-
 /*结果面板下面表格展示全部*/
-
-.table {
+.table{
     box-sizing: border-box;
     height: 100%;
     position: absolute;
     margin-top: 80px;
-    width: 330px;
+    width:330px;
 }
-
-.smooth_jam_rank {
+.smooth_jam_rank{
     padding-right: 6px;
     padding-left: 7px;
     float: left;
     border-right: 1px #e5e5e5 solid;
 }
-
-.smooth_jam_num_name {
+.smooth_jam_num_name{
     padding-right: 50px;
     padding-left: 50px;
     float: left;
     border-right: 1px #e5e5e5 solid;
 }
-
-.smooth_jam_num_index {
+.smooth_jam_num_index{
     padding-right: 7px;
     padding-left: 7px;
     float: left;
     border-right: 1px #e5e5e5 solid;
 }
-
-.smooth_jam_num_hierarchy {
+.smooth_jam_num_hierarchy{
     padding-right: 8px;
     padding-left: 8px;
     float: left;
     border-right: 1px #e5e5e5 solid;
 }
-
-.table_rows {
+.table_rows{
     box-sizing: border-box;
     height: 100%;
     position: absolute;
     margin-top: 30px;
-    width: 330px;
+    width:330px;
     overflow-y: scroll;
 }
-
-
-/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
-
-.table_rows::-webkit-scrollbar {
-    width: 6px;
-    height: 30px;
-    background-color: white;
-}
-
-
-/*定义滚动条轨道 内阴影+圆角*/
-
-.table_rows::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: white;
-}
-
-
-/*定义滑块 内阴影+圆角*/
-
-.table_rows::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: #9c9c9c;
-}
-
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/  
+.table_rows::-webkit-scrollbar  
+{  
+    width: 6px;  
+    height: 30px;  
+    background-color: white;  
+}  
+  
+/*定义滚动条轨道 内阴影+圆角*/  
+.table_rows::-webkit-scrollbar-track  
+{  
+    border-radius: 10px;  
+    background-color:white;  
+}  
+  
+/*定义滑块 内阴影+圆角*/  
+.table_rows::-webkit-scrollbar-thumb  
+{  
+    border-radius: 10px;  
+    background-color: #9c9c9c;  
+} 
 
 /*表格内的数据 */
-
-.row {
+.row{
     border-top: 1px solid #eaeaea;
     margin-top: 10px;
     float: left;
 }
-
-.rank {
+.rank{
     float: left;
     width: 25px;
     height: 20px;
     padding-left: 5px;
     padding-right: 5px;
 }
-
-.name {
+.name{
     float: left;
-    width: 130px;
-    height: 20px;
-    text-align: center;
-    cursor:pointer;
+    width: 128px;
+    height: 22px;
+    text-align:center;
+    overflow: hidden; 
+    text-overflow:ellipsis;
+    white-space:nowrap;
 }
-
-.index {
+.index{
     float: left;
     width: 60px;
     height: 20px;
-    text-align: center;
+    text-align:center;
 }
-
-.hierarchy {
+.hierarchy{
     color: chartreuse;
     float: left;
     width: 60px;
     height: 20px;
-    text-align: center;
+    text-align:center;
 }
-
