--- a/src/components/rbox/_rbox.css
+++ b/src/components/rbox/_rbox.css
@@ -165,3 +165,9 @@
     background-color: #555;
 }
 
+.rboxPanel2{
+    padding: 20px 20px 20px 20px;
+    background: #fff;
+    
+    overflow: hidden;
+}
