--- a/assets/style.css
+++ b/assets/style.css
@@ -1070,3 +1070,10 @@ background-color:#f4f5f6;
     height: 20px;
     text-align:center;
 }
+
+._2hpJLn6FTwtQ6EDixh_OQv{
+    margin-top: 340px;
+    margin-right: 20px;
+    float: right;
+}
+/*# sourceMappingURL=style.css.map*/
