--- a/assets/style.css
+++ b/assets/style.css
@@ -516,6 +516,12 @@ background-color:#f4f5f6;
     background-color: 'red';
     height: 20px;
 }
+._3pwsO30I_vRLm_qvdja6EP{
+    margin-left: 5px;
+    width:100px;
+    height:20px;
+    border-radius: 5px;
+}
 
 ._2llNwVAGqDnhF4R1h3Zbm0 {
     z-index: 2000;
