--- a/src/components/toolBar/menu/_UniqueSub.css
+++ b/src/components/toolBar/menu/_UniqueSub.css
@@ -29,3 +29,9 @@ background-color:#f4f5f6;
     background-color: 'red';
     height: 20px;
 }
+.colorpickerDiv{
+    margin-left: 5px;
+    width:100px;
+    height:20px;
+    border-radius: 5px;
+}
