--- a/src/components/rbox/menu/_craResults.css
+++ b/src/components/rbox/menu/_craResults.css
@@ -129,6 +129,7 @@
     padding-left: 50px;
     float: left;
     border-right: 1px #e5e5e5 solid;
+
 }
 .smooth_jam_num_index{
     padding-right: 7px;
@@ -193,6 +194,7 @@
     overflow: hidden; 
     text-overflow:ellipsis;
     white-space:nowrap;
+        cursor: pointer;
 }
 .index{
     float: left;
