--- a/src/components/toolBar/menu/_UniqueSub.css
+++ b/src/components/toolBar/menu/_UniqueSub.css
@@ -20,6 +20,7 @@ height:auto;
 .button1{
     margin-left: 5px;
     margin-top:10px;
+    border-radius: 2px;
 }
 .QueContent{
 background-color:#f4f5f6;
@@ -34,4 +35,52 @@ background-color:#f4f5f6;
     width:100px;
     height:20px;
     border-radius: 5px;
+}
+.button_primary{
+    margin-left: 5px;
+    margin-top:10px;
+    color: #fff;
+  background-color: #007edf;
+  border-color: #007edf;
+  border-radius: 2px;
+}
+.button_primary:hover,
+.button_primary:focus {
+  color: #ffffff;
+  background-color: #4bbef2;
+  border-color: #4bbef2;
+}
+.button_primary:hover > a:only-child,
+.button_primary:focus > a:only-child {
+  color: currentColor;
+}
+.button_primary:hover > a:only-child:after,
+.button_primary:focus > a:only-child:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent;
+}
+.button_primary:active,
+.button_primary.active {
+  color: #f2f2f2;
+  background-color: #4bbef2;
+  border-color: #4bbef2;
+}
+.button_primary:active > a:only-child,
+.button_primary.active > a:only-child {
+  color: currentColor;
+}
+.button_primary:active > a:only-child:after,
+.button_primary.active > a:only-child:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent;
 }
