--- a/src/components/toolBar/menu/_updateIndex.css
+++ b/src/components/toolBar/menu/_updateIndex.css
@@ -98,10 +98,7 @@
 .checkboxes{
     margin-left: 110px;
 }
-.loadingButton{
-    margin-left: 150px;
-    margin-top: 10px;
-}
+
 .splitline_H{
     width:320px;
     margin-top: 5px;
@@ -149,4 +146,52 @@ background-color:#fff;
 }
 .slider{
     width:60px;
+}
+.button_primary{
+ margin-left: 150px;
+    margin-top: 10px;
+    color: #fff;
+  background-color: #007edf;
+  border-color: #007edf;
+  border-radius: 2px;
+}
+.button_primary:hover,
+.button_primary:focus {
+  color: #ffffff;
+  background-color: #4bbef2;
+  border-color: #4bbef2;
+}
+.button_primary:hover > a:only-child,
+.button_primary:focus > a:only-child {
+  color: currentColor;
+}
+.button_primary:hover > a:only-child:after,
+.button_primary:focus > a:only-child:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent;
+}
+.button_primary:active,
+.button_primary.active {
+  color: #f2f2f2;
+  background-color: #4bbef2;
+  border-color: #4bbef2;
+}
+.button_primary:active > a:only-child,
+.button_primary.active > a:only-child {
+  color: currentColor;
+}
+.button_primary:active > a:only-child:after,
+.button_primary.active > a:only-child:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent;
 }
