--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -374,3 +374,10 @@ html, body, #map {
 				filter: alpha(opacity=0);
 			}
 		}
+.custom .leaflet-popup-tip,
+.custom .leaflet-popup-content-wrapper {
+  /*  background: rgba(0,0,0,0);
+    box-shadow:0 0 0 0 rgba(0,0,0,0);*/
+}
+
+
