--- a/src/components/rbox/menu/_SearchResults.css
+++ b/src/components/rbox/menu/_SearchResults.css
@@ -159,26 +159,26 @@
 }
 
 .font_color1 {
-    color: #36AE4C;
+    color: #277b04;
     font-weight: bold;
 }
 
 .font_color2 {
-    color: #6AB72D;
+    color: #34b100;
     font-weight: bold;
 }
 
 .font_color3 {
-    color: #ECE839;
+    color: #ffcb00;
     font-weight: bold;
 }
 
 .font_color4 {
-    color: #F29618;
+    color: #ff8800;
     font-weight: bold;
 }
 
 .font_color5 {
-    color: #E41A16;
+    color: #df0000;
     font-weight: bold;
 }
