--- a/src/components/toolBar/_toolBar.css
+++ b/src/components/toolBar/_toolBar.css
@@ -44,18 +44,18 @@ ol, ul {
     height: 16px;
     padding: 20px 10px 0;
     border-right: 1px #e5e5e5 solid;
-    background: url(../../images/tools_layer_new.png) no-repeat;
+    background: url(../../images/tools_123.png) no-repeat;
 }
 
 .traffic{
     composes:layerItemSpan;
     padding-top: 20px;
-    background-position: 11px 4px;
+    background-position: 11px 5px;
 }
 .traffic_active{
     composes:layerItemSpan;
     padding-top: 20px;
-    background-position: 11px -45px;
+    background-position: 11px -57px;
 }
 .traffic:hover{
     opacity: 0.6
@@ -63,19 +63,19 @@ ol, ul {
 .satellite{
     composes:layerItemSpan;
     padding: 20px, 10px, 0, 10px;
-    background-position: 11px -336px;
+    background-position: 11px -123px;
 }
 .satellite_active{
     composes:layerItemSpan;
     padding-top: 20px;
-    background-position: 11px -530px;
+    background-position: 11px -190px;
 }
 .satellite:hover{
     opacity: 0.6
 }
 .subway{
     composes:layerItemSpan;
-    background-position: 11px -142px;
+    background-position: 11px -257px;
 }
 .subway:hover{
     opacity: 0.6
@@ -83,10 +83,10 @@ ol, ul {
 .subway_active{
     composes:layerItemSpan;
     padding-top: 20px;
-    background-position: 11px -190px;
+    background-position: 11px -326px;
 }
 /*tool_item*/
-.toolItemSpan {
+/*.toolItemSpan {
     float: left;
     cursor: pointer;
     display: inline-block;
@@ -94,28 +94,28 @@ ol, ul {
     padding: 20px 10px 0;
     border-right: 1px #e5e5e5 solid;
     background: url(../../images/tools_new.png) no-repeat;
-}
+}*/
 .ranging{
-    composes:toolItemSpan;
-    background-position: 11px 2px;
+    composes:layerItemSpan;
+    background-position: 11px -392px;
 }
 .ranging:hover{
     opacity: 0.6
 }
 .ranging_active{
-    composes:toolItemSpan;
+    composes:layerItemSpan;
     padding-top: 20px;
-    background-position: 10px -62px;
+    background-position: 11px -457px;
 }
 .fullscreen{
-    composes:toolItemSpan;
+    composes:layerItemSpan;
     border: 0;
-    background-position: 11px -255px;
+    background-position: 11px -523px;
 }
 .fullscreen_active{
-    composes:toolItemSpan;
+    composes:layerItemSpan;
     border: 0;
-    background-position: 11px -319px;
+    background-position: 11px -588px;
 }
 .fullscreen:hover{
     opacity: 0.6
