--- a/src/components/toolBar/menu/_traffic.css
+++ b/src/components/toolBar/menu/_traffic.css
@@ -57,23 +57,23 @@
 }
 .traffic_level_1{
     composes:traffic_level_li;
-    background: rgb(52, 176, 0);
+    background: #277b04;
 }
 .traffic_level_2{
     composes:traffic_level_li;
-    background: rgb(254, 203, 0);
+    background: #34b100;
 }
 .traffic_level_3{
     composes:traffic_level_li;
-    background: rgb(255, 143, 0);
+    background: #ffcb00;
 }
 .traffic_level_4{
     composes:traffic_level_li;
-    background: rgb(223, 1, 0);
+    background: #ff8800;
 }
 .traffic_level_5{
     composes:traffic_level_li;
-    background: rgb(142, 14, 11);
+    background: #df0000;
 }
 /*panel Body*/
 .panel_body {
