--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -380,4 +380,20 @@ html, body, #map {
     box-shadow:0 0 0 0 rgba(0,0,0,0);*/
 }
 
+._epHidden{display:none!important;}
+/*@media print {
+	html {padding: 0px!important;}
+}*/
 
+.parking_logoImg{
+	    float: left;
+    width: 18px;
+    height: 18px;
+    display:inline;
+}
+.carParkPopup .leaflet-popup-content-wrapper {
+	border-radius: 2px;
+	min-width: 150px;
+/*	background-color:'blue';*/
+	height:100px;
+}
